/api/company/ applied
